# EHR

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_documents.py  0003_payer_rules.py  0004_service_request_reason.py  0005_service_request_encounter.py  0006_provenance_links.py
app/: main.py  seed.py
app/api/: fhir_routes.py  internal_routes.py  job_routes.py  payer_routes.py  preauth_routes.py
app/core/: config.py
app/db/: models.py  session.py
app/scripts/: bootstrap.py  wait_for_db.py
app/services/: audit.py  internal.py  provenance.py  terminology.py
app/services/admin/: service.py
app/services/jobs/: service.py
app/services/mapping/: fhir_dispatch.py  fhir_utils.py
app/services/mapping/resources/: base.py  binary.py  condition.py  document_reference.py  encounter.py  observation.py  organization.py  patient.py  practitioner.py  provenance.py  service_request.py
app/services/payer/: evaluator.py  rules.py
app/services/preauth/: service.py
app/services/scenarios/: service.py
app/worker/: celery_app.py  tasks.py
docker/: api.Dockerfile
tests/: conftest.py  test_condition_service_request_and_preauth.py  test_fhir_patient.py  test_observation_search_and_versions.py
web/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
web/src/api/: client.ts
web/src/modules/: ModuleHost.tsx  registry.json
web/src/ui/: App.tsx  ContextBar.tsx  context.tsx  eventBus.ts  styles.css
(+25 files in other folders)
