[project]
name = "ehr-som-fhir-sample"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
  "psycopg[binary]==3.2.3",
  "tenacity==9.0.0",
  "celery==5.4.0",
  "redis==5.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "httpx==0.27.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

